# threads_tracker

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  README.md  SCHEDULE.md  SELF_SCRAPER_FEASIBILITY.md  pyproject.toml  threads_tracker_proposal.md  threads_tracker_proposal_v2.md  threads_tracker_proposal_v3.md
alembic/: env.py  script.py.mako
alembic/versions/: 3cc2f42838db_v3_schema.py  a1efa9e7d751_initial_schema.py
docs/: v3_schema.md
reddit_tracker_starter/: PROGRESS.md  SCHEDULE.md  reddit_tracker_proposal.md
scripts/: m1_apify_smoke.py
src/threads_tracker/: __init__.py  api.py  cli.py  config.py  db.py  logging.py  models.py  scheduler.py  schemas.py
src/threads_tracker/bot/: __init__.py  app.py  handlers.py
src/threads_tracker/llm/: __init__.py  base.py  client.py  factory.py  haiku.py  minimax.py  opus.py
src/threads_tracker/scrapers/: __init__.py  apify.py  base.py  factory.py  fake.py  watcher.py
src/threads_tracker/seeds/: keyword_seeds.py  loader.py
src/threads_tracker/services/: __init__.py  detection.py  discovery.py  polling.py  scoring.py  summarization.py  tracking.py
tests/: test_discovery.py  test_llm.py  test_scoring.py  test_smoke.py  test_summarization.py
