[project]
name = "threads-tracker"
version = "0.1.0"
description = "Threads 熱點貼文後續追蹤系統 (FastAPI + APScheduler + Telegram + Anthropic)"
authors = [
    { name = "Leroy", email = "shps100155@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.97.0",
    "apscheduler>=3.11.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-telegram-bot[webhooks]>=22.7",
    "sqlalchemy>=2.0",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
threads-tracker = "threads_tracker.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "sqlalchemy[asyncio]>=2.0.49",
]
